--- a/trunk/carpooling/.settings/org.eclipse.wst.common.component
+++ b/trunk/carpooling/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="carpooling">
-        <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapps"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/zing"/>
         <property name="context-root" value="carpooling"/>
         <property name="java-output-path" value="/carpooling/build/classes"/>
     </wb-module>
